fix: adiciona seo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Gerencie embarcações, passageiros e documentos de viagem de forma segura e eficiente com o sistema SEALS." />
+    <meta name="keywords" content="sistema marítimo, controle de embarcações, documentos de viagem, duv, passageiros, SEALS" />
+    <meta name="author" content="SEALS - Sistema de Embarcações" />
+    <meta name="robots" content="index, follow" />
+
+    <title>Gerencie embarcações</title>
   </head>
   <body>
     <div id="root"></div>
